test/covert/stack.meet

// a simple stack write in meet.

impl Stack(fixed: boolean) {

    open enum Type -> INTEGER, STRING, FLOAT

    open var stack: void = [], valueFixedType: void = null
  
    init -> valueFixedType = this.fixed
  
    func push(value: void) -> void {
        if (valueFixedType) -> valueFixedType = type(value)
    
        if (type(value) != valueFixedType) {
            println 'cannot push different value for fixed type.'
      
            return null
        } else {
            stack.insert(value)
      
            return value
        }
    }
  
    func pop() -> void -> stack.remove(stack.length - 1)
  
    func peek() -> void -> stack.at(stack.length - 1)
  
    func size() -> int -> stack.size()
}

var a = new Stack(true)

println a.push(1223)
println a.push('12') // error
